--- a/HotelApp.Desktop/appsettings.json
+++ b/HotelApp.Desktop/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "SqlDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=HotelAppDB;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "SqlDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=HotelAppDB2;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
