--- a/HotelApp.Desktop/appsettings.json
+++ b/HotelApp.Desktop/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "SqlDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=HotelAppDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "SqlDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=HotelAppDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "SqliteDb": "Data Source=C:\\Users\\FrogYoga\\Documents\\MEGA\\00_WebDev\\C# Master Class\\HotelApp\\SQLite\\HotelAppDB.db;Version=3;"
   },
   "DatabaseChoice": "SQLite"
 }
