--- a/HotelApp.Web/appsettings.json
+++ b/HotelApp.Web/appsettings.json
@@ -8,7 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=HotelAppDB;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "SqlDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=HotelAppDB;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "SqliteDb": "Data Source=C:\\Users\\FrogYoga\\Documents\\MEGA\\00_WebDev\\C# Master Class\\HotelApp\\SQLite\\HotelAppDB.db;Version=3;"
   },
   "DatabaseChoice": "SQLite"
 }
